fix letter spacing on cta button

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1103,6 +1103,8 @@ ul.grid {
 
 .cta .button {
   box-shadow: white 0px 0px 12px 5px;
+  line-height: 0.7;
+  padding: var(--s1) var(--s0);
 }
 
 .cta .button:hover,
